...
                android:layout_marginRight="15sp"
                android:text="@string/event_poster"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/Event_Poster_Input"
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:padding="4dp"
                android:background="@drawable/rounded_rectangle"
...
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EventNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Event Name"
                    android:padding="16dp"
                    android:textSize="16sp"/>
...
                android:layout_marginTop="25sp"
                android:text="@string/event_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Event_Description_Input"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:background="@android:drawable/editbox_background"
                android:gravity="top|start"
...
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp">

                <AutoCompleteTextView
                    android:id="@+id/EventAddressInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:completionThreshold="1"
...
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EventPriceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="Event Price"
                    android:padding="16dp"
                    android:textSize="16sp"/>
...
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusBottomEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EventDateInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="Date"
                        android:padding="16dp"
...
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusBottomEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EventTimeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="Time"
                        android:padding="16dp"
...
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusBottomEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EventOpensSelector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="Select Opening Date"
                        android:padding="16dp"
...
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusBottomEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EventClosesSelector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="Select Closing Date"
                        android:padding="16dp"
...
                app:boxStrokeWidthFocused="2dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MaxEntrantInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Max Entrants"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textSize="16sp"/>
...
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:text="(optional)"
                    android:textColor="@color/dark_grey"
                    />
                <Button
                    android:id="@+id/Tag_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:text="Select Event Tags"
                    android:textAlignment="center"
...
            android:background="@drawable/cancel_button"
            android:backgroundTint="@null"
            android:text="@string/cancel"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Confirm_Creation_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
...
