<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_nav_home"
        android:title="@string/home" />

    <item
        android:id="@+id/eventHistoryFragment"
        android:icon="@drawable/selector_nav_entries"
        android:title="@string/entries" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/selector_nav_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_my_events"
        android:icon="@drawable/selector_nav_my_events"
        android:title="@string/my_events" />

</menu>
