...
    </LinearLayout>

    <!-- Loading bar -->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/CreateNewEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="Add Event"
        app:backgroundTint="@color/main_icon_blue"
        app:layout_constraintBottom_toBottomOf="parent"
...
