...
            app:srcCompat="@drawable/baseline_check_circle_outline_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Event Created"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/qr_code_event_name"
...
